# ResenseHEX-py

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: hex32_read.py  tara_test.py
resensehex/: __init__.py  cli.py  core.py
