[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resensehex"
version = "1.0.0"
description = "Read a Resense HEX32 6-axis Force/Torque sensor directly over USB (Linux/macOS/Windows)."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Julian Seiler", email = "julian.seiler@tu-darmstadt.de" }]
keywords = ["resense", "hex32", "force-torque", "sensor", "serial", "usb", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = ["pyserial>=3.5"]

[project.urls]
Homepage = "https://github.com/TUDA-MUST/ResenseHEX-cpp"
"Arduino library" = "https://github.com/TUDA-MUST/ResenseHEX"

[project.scripts]
hex32-read = "resensehex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["resensehex"]

[tool.hatch.build.targets.sdist]
include = ["resensehex", "examples", "docs", "README.md", "LICENSE"]
